{
  "version": 4,
  "terraform_version": "1.8.5",
  "serial": 259,
  "lineage": "d074d56e-c11d-e572-7602-9c2f17ee83a2",
  "resources": [
    {
      "module": "module.ec2-1",
      "mode": "managed",
      "type": "aws_instance",
      "name": "AWS_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05e00961530ae1b55",
            "arn": "arn:aws:ec2:ap-south-1:408203870674:instance/i-0d58f279bdfe07b82",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d58f279bdfe07b82",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e66d73fbcbb5e978",
            "private_dns": "ip-172-16-0-148.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.16.0.148",
            "public_ip": "13.127.148.200",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ebe28377f2e96cc5",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0eb07f5be74238bc0",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-058492320753ef301"
            ]
          },
          "dependencies": [
            "module.security_grp1.aws_security_group.example",
            "module.vpc-1.aws_subnet.public_subnet-1",
            "module.vpc-1.aws_vpc.vpc_ap-south-1"
          ]
        }
      ]
    },
    {
      "module": "module.ec2-2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "AWS_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05e00961530ae1b55",
            "arn": "arn:aws:ec2:ap-south-1:408203870674:instance/i-02d41dd43e8e8eccd",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02d41dd43e8e8eccd",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e771c355f5e86a35",
            "private_dns": "ip-172-16-2-125.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.16.2.125",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-04851bcf77cbc7789",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02533872672e5ccdf",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f6e77b2c5d8edae3"
            ]
          },
          "dependencies": [
            "module.security_grp2.aws_security_group.example",
            "module.vpc-1.aws_subnet.private_subnet-1",
            "module.vpc-1.aws_vpc.vpc_ap-south-1"
          ]
        }
      ]
    },
    {
      "module": "module.security_grp1",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:408203870674:security-group/sg-058492320753ef301",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-058492320753ef301",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "eSparkBiz-secgrp-1",
            "name_prefix": "",
            "owner_id": "408203870674",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-05d3df2f1ec175775"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-1.aws_vpc.vpc_ap-south-1"
          ]
        }
      ]
    },
    {
      "module": "module.security_grp2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:408203870674:security-group/sg-0f6e77b2c5d8edae3",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f6e77b2c5d8edae3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "eSparkBiz-secgrp-2",
            "name_prefix": "",
            "owner_id": "408203870674",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-05d3df2f1ec175775"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-1.aws_vpc.vpc_ap-south-1"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-1",
      "mode": "managed",
      "type": "aws_eip",
      "name": "elastic_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09e826070f911d77c",
            "arn": "arn:aws:ec2:ap-south-1:408203870674:elastic-ip/eipalloc-09e826070f911d77c",
            "association_id": "eipassoc-078229bf911023a58",
            "domain": "vpc",
            "id": "eipalloc-09e826070f911d77c",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-013d86450effe2cbc",
            "private_dns": "ip-172-16-0-153.ap-south-1.compute.internal",
            "private_ip": "172.16.0.153",
            "public_dns": "ec2-65-0-216-194.ap-south-1.compute.amazonaws.com",
            "public_ip": "65.0.216.194",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc-1",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:408203870674:internet-gateway/igw-0fcc99a30f57ac19f",
            "id": "igw-0fcc99a30f57ac19f",
            "owner_id": "408203870674",
            "tags": {
              "Name": "main"
            },
            "tags_all": {
              "Name": "main"
            },
            "vpc_id": "vpc-05d3df2f1ec175775"
          },
          "dependencies": [
            "module.vpc-1.aws_vpc.vpc_ap-south-1"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-1",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09e826070f911d77c",
            "association_id": "eipassoc-078229bf911023a58",
            "connectivity_type": "public",
            "id": "nat-0f07954cae99a3846",
            "network_interface_id": "eni-013d86450effe2cbc",
            "private_ip": "172.16.0.153",
            "public_ip": "65.0.216.194",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0eb07f5be74238bc0",
            "tags": {
              "Name": "main_nat"
            },
            "tags_all": {
              "Name": "main_nat"
            }
          },
          "dependencies": [
            "module.vpc-1.aws_eip.elastic_ip",
            "module.vpc-1.aws_subnet.public_subnet-1",
            "module.vpc-1.aws_vpc.vpc_ap-south-1"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-1",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:408203870674:route-table/rtb-0756fd3271d8ac2e5",
            "id": "rtb-0756fd3271d8ac2e5",
            "owner_id": "408203870674",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0f07954cae99a3846",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private-RT"
            },
            "tags_all": {
              "Name": "Private-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-05d3df2f1ec175775"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-1.aws_eip.elastic_ip",
            "module.vpc-1.aws_nat_gateway.nat_gateway",
            "module.vpc-1.aws_subnet.public_subnet-1",
            "module.vpc-1.aws_vpc.vpc_ap-south-1"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-1",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:408203870674:route-table/rtb-05a0274090b651e9a",
            "id": "rtb-05a0274090b651e9a",
            "owner_id": "408203870674",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0fcc99a30f57ac19f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public-RT"
            },
            "tags_all": {
              "Name": "Public-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-05d3df2f1ec175775"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-1.aws_internet_gateway.igw",
            "module.vpc-1.aws_vpc.vpc_ap-south-1"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-1",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_association_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00054db65e7b83603",
            "route_table_id": "rtb-0756fd3271d8ac2e5",
            "subnet_id": "subnet-02533872672e5ccdf"
          },
          "dependencies": [
            "module.vpc-1.aws_eip.elastic_ip",
            "module.vpc-1.aws_nat_gateway.nat_gateway",
            "module.vpc-1.aws_route_table.private_RT",
            "module.vpc-1.aws_subnet.private_subnet-1",
            "module.vpc-1.aws_subnet.public_subnet-1",
            "module.vpc-1.aws_vpc.vpc_ap-south-1"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-1",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_association_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-018eb358b720df516",
            "route_table_id": "rtb-0756fd3271d8ac2e5",
            "subnet_id": "subnet-0670377464fe55466"
          },
          "dependencies": [
            "module.vpc-1.aws_eip.elastic_ip",
            "module.vpc-1.aws_nat_gateway.nat_gateway",
            "module.vpc-1.aws_route_table.private_RT",
            "module.vpc-1.aws_subnet.private_subnet-2",
            "module.vpc-1.aws_subnet.public_subnet-1",
            "module.vpc-1.aws_vpc.vpc_ap-south-1"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-1",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_association_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08bd7e0ba1830a87e",
            "route_table_id": "rtb-05a0274090b651e9a",
            "subnet_id": "subnet-0eb07f5be74238bc0"
          },
          "dependencies": [
            "module.vpc-1.aws_internet_gateway.igw",
            "module.vpc-1.aws_route_table.public_RT",
            "module.vpc-1.aws_subnet.public_subnet-1",
            "module.vpc-1.aws_vpc.vpc_ap-south-1"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-1",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_association_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-086b9e8bdd4af1460",
            "route_table_id": "rtb-05a0274090b651e9a",
            "subnet_id": "subnet-0f1b69fe974ba53d8"
          },
          "dependencies": [
            "module.vpc-1.aws_internet_gateway.igw",
            "module.vpc-1.aws_route_table.public_RT",
            "module.vpc-1.aws_subnet.public_subnet-2",
            "module.vpc-1.aws_vpc.vpc_ap-south-1"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:408203870674:subnet/subnet-02533872672e5ccdf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "172.16.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02533872672e5ccdf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "408203870674",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private_subnet-ap-south-1a"
            },
            "tags_all": {
              "Name": "Private_subnet-ap-south-1a"
            },
            "vpc_id": "vpc-05d3df2f1ec175775"
          },
          "dependencies": [
            "module.vpc-1.aws_vpc.vpc_ap-south-1"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:408203870674:subnet/subnet-0670377464fe55466",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "172.16.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0670377464fe55466",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "408203870674",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private_subnet-ap-south-1b"
            },
            "tags_all": {
              "Name": "Private_subnet-ap-south-1b"
            },
            "vpc_id": "vpc-05d3df2f1ec175775"
          },
          "dependencies": [
            "module.vpc-1.aws_vpc.vpc_ap-south-1"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:408203870674:subnet/subnet-0eb07f5be74238bc0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "172.16.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eb07f5be74238bc0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "408203870674",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public_subnet-ap-south-1a"
            },
            "tags_all": {
              "Name": "Public_subnet-ap-south-1a"
            },
            "vpc_id": "vpc-05d3df2f1ec175775"
          },
          "dependencies": [
            "module.vpc-1.aws_vpc.vpc_ap-south-1"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:408203870674:subnet/subnet-0f1b69fe974ba53d8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "172.16.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f1b69fe974ba53d8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "408203870674",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public_subnet-ap-south-1b"
            },
            "tags_all": {
              "Name": "Public_subnet-ap-south-1b"
            },
            "vpc_id": "vpc-05d3df2f1ec175775"
          },
          "dependencies": [
            "module.vpc-1.aws_vpc.vpc_ap-south-1"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-1",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_ap-south-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:408203870674:vpc/vpc-05d3df2f1ec175775",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-0ca5d39783193c14c",
            "default_route_table_id": "rtb-0bcc71dfd61fd1011",
            "default_security_group_id": "sg-003ef1697a7d388ac",
            "dhcp_options_id": "dopt-08ebd2511e140ab44",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05d3df2f1ec175775",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0bcc71dfd61fd1011",
            "owner_id": "408203870674",
            "tags": {
              "Name": "VPC-1-eSparkBiz"
            },
            "tags_all": {
              "Name": "VPC-1-eSparkBiz"
            }
          }
        }
      ]
    }
  ]
}